[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hivesec-ecosystem-hub"
version = "0.1.0"
description = "Security agent ecosystem hub + dashboard (Streamlit)"
authors = [{name = "GBOYEE"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
py-modules = ["Home"]
packages = ["agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
